--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,10 @@
 body {
   width: 100%;
   height: 100%;
+  -ms-overflow-style:none; /* IE and Edge */
+  scrollbar-width:none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
