design : 모바일 토글해서 화면 크기 100% <-> 375px 변경. Layout의 GlobalLayoutContainer styled-component에 props로 전달해서 크기 관리

--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,14 @@
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  
+  @media (min-width: 640px) {
+       
+    width: var(--curWidth);
+  }
+  height: 100dvh; 
+  margin-left: auto;
+  margin-right: auto;  
+
   -ms-overflow-style:none; /* IE and Edge */
   scrollbar-width:none; /* Firefox */
 
