--- a/src/index.css
+++ b/src/index.css
@@ -23,25 +23,16 @@
 }
 
 body {
-  @media (min-width: 640px) {
-       
-    width: var(--curWidth);
-  }
+  width: 100%;
   height: 100dvh; 
-  margin-left: auto;
-  margin-right: auto;  
 
   -ms-overflow-style:none; /* IE and Edge */
   scrollbar-width:none; /* Firefox */
-
   /* 드래그 방지 */
   -webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
-
-
-
 }
 
 
