--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@
 
 body {
   width: 100%;
-  height: 100dvh; 
+  height: 100dvh;
+  overflow: auto;
 
   -ms-overflow-style:none; /* IE and Edge */
   scrollbar-width:none; /* Firefox */
@@ -33,6 +34,10 @@ body {
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
+
 }
 
+html::-webkit-scrollbar {
+  display: none;
+}
 
